--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="img/JavaScript_logo.png" alt="Javascript Logo">
                 <div class="card">
                     <p>Python is a programming language that is often used in data science! blah blah blah blah
-                        blah blah blah blah blah blah blah blah blah blah blah blah</p>
+                        blah blah blah blah blah blah blah blah blah blah blah blahs</p>
                     <button>Learn More</button>
                 </div>
             </div>
