Completion of index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <title>Home: Programming Languages</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -12,7 +16,7 @@
 
         <div class="navbar_container">
             <nav class="navbar">
-                <a href="index.html">Home</a>
+                <a href="index.html"><span>Home</span></a>
                 <a href="python.html">Python</a>
                 <a href="mysql.html">MySQL</a>
                 <a href="javascript.html">JavaScript</a>
@@ -24,9 +28,9 @@
             <div class="card_container">
                 <img src="img/python_logo.png" alt="Python Logo">
                 <div class="card">
-                    <p>Python is a programming language that is often used in data science! blah blah blah blah
-                        blah blah blah blah blah blah blah blah blah blah blah blah</p>
-                    <button>Learn More</button>
+                    <p><span>Python</span> is a high-level versatile programming language known for readability and simplicity.
+                    Most used in data science and artificial intelligence projects.</p>
+                    <button onclick="location.href='python.html'" type="button">Learn More</button>
                 </div>
             </div>
 
@@ -34,9 +38,9 @@
             <div class="card_container">
                 <img src="img/MySQL-Logo.png" alt="MySQL Logo">
                 <div class="card">
-                    <p>Python is a programming language that is often used in data science! blah blah blah blah
-                        blah blah blah blah blah blah blah blah blah blah blah blah</p>
-                    <button>Learn More</button>
+                    <p><span>MySQL</span> is a widely used open-source database management system.
+                    Used heavily in web applications and data-driven projects.</p>
+                    <button onclick="location.href='mysql.html'" type="button">Learn More</button>
                 </div>
             </div>
 
@@ -44,12 +48,11 @@
             <div class="card_container">
                 <img src="img/JavaScript_logo.png" alt="Javascript Logo">
                 <div class="card">
-                    <p>Python is a programming language that is often used in data science! blah blah blah blah
-                        blah blah blah blah blah blah blah blah blah blah blah blahs</p>
-                    <button>Learn More</button>
+                    <p><span>JavaScript</span> is a versatile programming language primarily used in web development.
+                    Enables interactive and dynamic elements on websites.</p>
+                    <button onclick="location.href='javascript.html'" type="button">Learn More</button>
                 </div>
             </div>
-
 
         </div>
 
