Prepped for Design

--- a/javascript.html
+++ b/javascript.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>JavaScript</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
 
-</body>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <h1 id="page_title">Popular Programming Languages</h1>
+
+        <div class="navbar_container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="python.html">Python</a>
+                <a href="mysql.html">MySQL</a>
+                <a href="javascript.html"><span>JavaScript</span></a>
+            </nav>
+        </div>
+
+        <div class="content">
+
+        </div>
+
+        <footer class="footer">
+            <hr>
+            <div class="container">
+                <img src="img/csumbLogo3.png" alt="CSUMB logo">
+                <div class="text_container">
+                    <p>
+                        CST336 Internet Programming: 2023&copy; Casey <br>
+                        <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
+                        It is used for academic purposes only.
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
