Comments + Page Titles

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             </nav>
         </div>
 
+        <!-- Main Content Div -->
         <div class="content">
 
+            <!-- card 1 : Python-->
             <div class="card_container">
                 <img src="img/python_logo.png" alt="Python Logo">
                 <div class="card">
@@ -34,7 +36,7 @@
                 </div>
             </div>
 
-
+            <!-- card 2 : MySQL-->
             <div class="card_container">
                 <img src="img/MySQL-Logo.png" alt="MySQL Logo">
                 <div class="card">
@@ -44,7 +46,7 @@
                 </div>
             </div>
 
-
+            <!-- card 3 : JavaScript-->
             <div class="card_container">
                 <img src="img/JavaScript_logo.png" alt="Javascript Logo">
                 <div class="card">
