--- a/python.html
+++ b/python.html
@@ -12,7 +12,7 @@
 
     <body>
 
-        <h1 id="page_title">Popular Programming Languages</h1>
+        <h1 id="page_title">Python: An Overview</h1>
 
         <div class="navbar_container">
             <nav class="navbar">
