--- a/python.html
+++ b/python.html
@@ -24,6 +24,47 @@
         </div>
 
         <div class="content">
+            <div class="article_container">
+                <div class="left_column">
+                    <img src="img/Python_Creator.png" alt="Guido Van Rossum Portrait">
+                    <p class="caption">Designer of python, <strong>Guido van Rossum</strong></p>
+                </div>
+
+                <div class="center_column">
+                    <article class="article">
+                        <h2>What is Python?</h2>
+                        <p class="section">
+                            Python is a <span>high level object orientated programming language</span>.
+                            Python is built with rapid deployment in mind. Due to Python's easy to learn syntax,
+                            it is exceptionally easy to increase readability while also reducing the cost of long term
+                            maintenance. Python simplifies data structures which also makes it a <span>great candidate
+                            for beginners.</span> Finally, Python is an extremely modular language with its support for
+                            modules and packages.
+                        </p>
+                        <h2>Where is Python Used?</h2>
+                        <p class="section">
+                            Due to Python's simplistic nature, Python is heavily used in <span>data analysis, machine learning
+                            , and software development.</span> Python can easily be used for data visualization which makes
+                            it a fantastic tool for many jobs in the scientific field as well.
+                        </p>
+                    </article>
+
+                    <div class="references">
+                        <hr>
+                        <h2>Sources</h2>
+                        <ol id="sources">
+                            <li><a href="https://www.python.org/doc/essays/blurb/">python.org</a></li>
+                            <li><a href="https://www.datacamp.com/blog/what-is-python-used-for">datacamp.com</a></li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="right_column">
+                    <img src="img/python_data_visualization.png" alt="Graph showing Python data visualization">
+                    <p class="caption">Data visualization using python</p>
+                </div>
+            </div>
+
 
         </div>
 
