Python: An Overview complete

--- a/python.html
+++ b/python.html
@@ -43,8 +43,8 @@
                         </p>
                         <h2>Where is Python Used?</h2>
                         <p class="section">
-                            Due to Python's simplistic nature, Python is heavily used in <span>data analysis, machine learning
-                            , and software development.</span> Python can easily be used for data visualization which makes
+                            Due to Python's simplistic nature, Python is heavily used in <span>data analysis, machine learning,
+                            and software development.</span> Python can easily be used for data visualization which makes
                             it a fantastic tool for many jobs in the scientific field as well.
                         </p>
                     </article>
