MySQL: An Overview completion + some changes to others

--- a/javascript.html
+++ b/javascript.html
@@ -24,7 +24,39 @@
         </div>
 
         <div class="content">
+            <div class="article_container">
+                <div class="left_column">
+                    <img src="img/Python_Creator.png" alt="Guido Van Rossum Portrait">
+                    <p class="caption">CAPTION</p>
+                </div>
 
+                <div class="center_column">
+                    <article class="article">
+                        <h2>What is MySQL?</h2>
+                        <p class="section">
+                            MySQL
+                        </p>
+                        <h2>Where is MySQL Used?</h2>
+                        <p class="section">
+                            MySQL
+                        </p>
+                    </article>
+
+                    <div class="references">
+                        <hr>
+                        <h2>Sources</h2>
+                        <ol id="sources">
+                            <li><a href="https://www.python.org/doc/essays/blurb/">TBA</a></li>
+                            <li><a href="https://www.datacamp.com/blog/what-is-python-used-for">TBA</a></li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="right_column">
+                    <img src="img/python_data_visualization.png" alt="Graph showing Python data visualization">
+                    <p class="caption">CAPTION</p>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
