--- a/mysql.html
+++ b/mysql.html
@@ -24,7 +24,44 @@
         </div>
 
         <div class="content">
+            <div class="article_container">
+                <div class="left_column">
+                    <img src="img/MySQL_table.png" alt="MySQL Table">
+                    <p class="caption">A MySQL Table</p>
+                </div>
 
+                <div class="center_column">
+                    <article class="article">
+                        <h2>What is MySQL?</h2>
+                        <p class="section">
+                            MySQL is a <span>database management system.</span> Simply put, MySQL is a structured collection of data
+                            which can be organized at <span>mass scale</span> and used in anything from web applications to full
+                            production products. MySQL's databases are 'relational' which means data is stored in separate
+                            tables instead of in one large object. MySQL's software is also <span>open source!</span>
+                            This means <strong>anyone</strong> can use and modify the software.
+                        </p>
+                        <h2>Where is MySQL Used?</h2>
+                        <p class="section">
+                            MySQL is an incredibly valuable and powerful tool. MySQL is used in these applications, many
+                            of which you have probably heard of: <br><br>
+                            Facebook, Twitter, Netflix, Uber, and Shopify
+                        </p>
+                    </article>
+
+                    <div class="references">
+                        <hr>
+                        <h2>Sources</h2>
+                        <ol id="sources">
+                            <li><a href="https://dev.mysql.com/doc/refman/8.0/en/what-is-mysql.html">dev.mysql.com</a></li>
+                            <li><a href="https://www.oracle.com/mysql/what-is-mysql/">oracle.com</a></li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="right_column">
+                    <!-- Nothing here - Keeping for template-->
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
