JavaScript: An Overview completion

--- a/javascript.html
+++ b/javascript.html
@@ -26,19 +26,26 @@
         <div class="content">
             <div class="article_container">
                 <div class="left_column">
-                    <img src="img/Python_Creator.png" alt="Guido Van Rossum Portrait">
-                    <p class="caption">CAPTION</p>
+                    <img src="img/js_Creator.jpg" alt="Brendan Eich Portrait">
+                    <p class="caption"><strong>Brendan Eich</strong>, creator of JavaScript</p>
                 </div>
 
                 <div class="center_column">
                     <article class="article">
-                        <h2>What is MySQL?</h2>
+                        <h2>What is JavaScript?</h2>
                         <p class="section">
-                            MySQL
+                            JavaScript is a lightweight programming language that focuses on <span>web development</span>.
+                            JavaScript allows users to make their web pages dynamic and exciting, while also providing
+                            helpful features like dynamic HTML/CSS elements and other intractable elements like forms.
+                            Any non-static element on a web page likely includes JavaScript behind the scenes. JavaScript
+                            lets you maintain <span>user interaction</span> which CSS can not provide.
                         </p>
-                        <h2>Where is MySQL Used?</h2>
+                        <h2>Where is JavaScript Used?</h2>
                         <p class="section">
-                            MySQL
+                            JavaScript is used <span>everywhere</span>. As of 2022, <span>98.7% of websites</span>
+                            use Javascript as a client-side programming language. While JavaScript is typically used
+                            in web development and web applications, it can be used in games, smartwatch apps, and
+                            web servers.
                         </p>
                     </article>
 
@@ -46,15 +53,16 @@
                         <hr>
                         <h2>Sources</h2>
                         <ol id="sources">
-                            <li><a href="https://www.python.org/doc/essays/blurb/">TBA</a></li>
-                            <li><a href="https://www.datacamp.com/blog/what-is-python-used-for">TBA</a></li>
+                            <li><a href="https://www.hostinger.com/tutorials/what-is-javascript">hostinger.com</a></li>
+                            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">developer.mozilla.org</a></li>
+                            <li><a href="https://techjury.net/blog/javascript-usage-statistics/">techjury.net</a></li>
                         </ol>
                     </div>
                 </div>
 
                 <div class="right_column">
-                    <img src="img/python_data_visualization.png" alt="Graph showing Python data visualization">
-                    <p class="caption">CAPTION</p>
+                    <img src="img/js.png" alt="JavaScript written in an IDE">
+                    <p class="caption">JavaScript written in an IDE</p>
                 </div>
             </div>
         </div>
