Fixed small issue
MySQL is not a programming language, and I knew this, but, me being me, still put it as one anyways. That has been fixed in this patch.

--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Home: Programming Languages</title>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Home: Programming Languages</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
+</head>
 
-        <h1 id="page_title">Popular Programming Languages</h1>
+<body>
 
-        <div class="navbar_container">
-            <nav class="navbar">
-                <a href="index.html"><span>Home</span></a>
-                <a href="python.html">Python</a>
-                <a href="mysql.html">MySQL</a>
-                <a href="javascript.html">JavaScript</a>
-            </nav>
-        </div>
+  <h1 id="page_title">Popular Programming Languages</h1>
 
-        <!-- Main Content Div -->
-        <div class="content">
+  <div class="navbar_container">
+    <nav class="navbar">
+      <a href="index.html"><span>Home</span></a>
+      <a href="python.html">Python</a>
+      <a href="sql.html">SQL</a>
+      <a href="javascript.html">JavaScript</a>
+    </nav>
+  </div>
 
-            <!-- card 1 : Python-->
-            <div class="card_container">
-                <img src="img/python_logo.png" alt="Python Logo">
-                <div class="card">
-                    <p><span>Python</span> is a high-level versatile programming language known for readability and simplicity.
-                    Most used in data science and artificial intelligence projects.</p>
-                    <button onclick="location.href='python.html'" type="button">Learn More</button>
-                </div>
-            </div>
+  <!-- Main Content Div -->
+  <div class="content">
 
-            <!-- card 2 : MySQL-->
-            <div class="card_container">
-                <img src="img/MySQL-Logo.png" alt="MySQL Logo">
-                <div class="card">
-                    <p><span>MySQL</span> is a widely used open-source database management system.
-                    Used heavily in web applications and data-driven projects.</p>
-                    <button onclick="location.href='mysql.html'" type="button">Learn More</button>
-                </div>
-            </div>
+    <!-- card 0 : Python-->
+    <div class="about_card_container">
+      <div class="about_card">
+        <p>
+          A <span>programming language</span> is a tool that <span>developers</span> use to create applications!
+        </p>
+      </div>
+    </div>
 
-            <!-- card 3 : JavaScript-->
-            <div class="card_container">
-                <img src="img/JavaScript_logo.png" alt="Javascript Logo">
-                <div class="card">
-                    <p><span>JavaScript</span> is a versatile programming language primarily used in web development.
-                    Enables interactive and dynamic elements on websites.</p>
-                    <button onclick="location.href='javascript.html'" type="button">Learn More</button>
-                </div>
-            </div>
+    <!-- card 1 : Python-->
+    <div class="card_container">
+      <img src="img/python_logo.png" alt="Python Logo">
+      <div class="card">
+        <p><span>Python</span> is a high-level versatile programming language known for readability and simplicity.
+          Most used in data science and artificial intelligence projects.</p>
+        <button onclick="location.href='python.html'" type="button">Learn More</button>
+      </div>
+    </div>
 
-        </div>
+    <!-- card 2 : SQL-->
+    <div class="card_container">
+      <img src="img/Sql.png" alt="SQL image">
+      <div class="card">
+        <p><span>SQL</span> is a widely used language for database management systems.
+          Used heavily in web applications and data-driven projects.</p>
+        <button onclick="location.href='sql.html'" type="button">Learn More</button>
+      </div>
+    </div>
 
-        <footer class="footer">
-            <hr>
-            <div class="container">
-                <img src="img/csumbLogo3.png" alt="CSUMB logo">
-                <div class="text_container">
-                    <p>
-                        CST336 Internet Programming: 2023&copy; Casey <br>
-                        <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
-                        It is used for academic purposes only.
-                    </p>
-                </div>
-            </div>
-        </footer>
+    <!-- card 3 : JavaScript-->
+    <div class="card_container">
+      <img src="img/JavaScript_logo.png" alt="Javascript Logo">
+      <div class="card">
+        <p><span>JavaScript</span> is a versatile programming language primarily used in web development.
+          Enables interactive and dynamic elements on websites.</p>
+        <button onclick="location.href='javascript.html'" type="button">Learn More</button>
+      </div>
+    </div>
 
-    </body>
+  </div>
+
+  <footer class="footer">
+    <hr>
+    <div class="container">
+      <img src="img/csumbLogo3.png" alt="CSUMB logo">
+      <div class="text_container">
+        <p>
+          CST336 Internet Programming: 2023&copy; Casey <br>
+          <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
+          It is used for academic purposes only.
+        </p>
+      </div>
+    </div>
+  </footer>
+
+</body>
 
 </html>
