--- a/javascript.html
+++ b/javascript.html
@@ -1,84 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>JavaScript</title>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>JavaScript</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
+</head>
 
-        <h1 id="page_title">JavaScript: An Overview</h1>
+<body>
 
-        <div class="navbar_container">
-            <nav class="navbar">
-                <a href="index.html">Home</a>
-                <a href="python.html">Python</a>
-                <a href="mysql.html">MySQL</a>
-                <a href="javascript.html"><span>JavaScript</span></a>
-            </nav>
+  <h1 id="page_title">JavaScript: An Overview</h1>
+
+  <div class="navbar_container">
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="python.html">Python</a>
+      <a href="sql.html">SQL</a>
+      <a href="javascript.html"><span>JavaScript</span></a>
+    </nav>
+  </div>
+
+  <div class="content">
+    <div class="article_container">
+      <div class="left_column">
+        <img src="img/js_Creator.jpg" alt="Brendan Eich Portrait">
+        <p class="caption"><strong>Brendan Eich</strong>, creator of JavaScript</p>
+      </div>
+
+      <div class="center_column">
+        <article class="article">
+          <h2>What is JavaScript?</h2>
+          <p class="section">
+            JavaScript is a lightweight programming language that focuses on <span>web development</span>.
+            JavaScript allows users to make their web pages dynamic and exciting, while also providing
+            helpful features like dynamic HTML/CSS elements and other intractable elements like forms.
+            Any non-static element on a web page likely includes JavaScript behind the scenes. JavaScript
+            lets you maintain <span>user interaction</span> which CSS can not provide.
+          </p>
+          <h2>Where is JavaScript Used?</h2>
+          <p class="section">
+            JavaScript is used <span>everywhere</span>. As of 2022, <span>98.7% of websites</span>
+            use Javascript as a client-side programming language. While JavaScript is typically used
+            in web development and web applications, it can be used in games, smartwatch apps, and
+            web servers.
+          </p>
+        </article>
+
+        <div class="references">
+          <hr>
+          <h2>Sources</h2>
+          <ol id="sources">
+            <li><a href="https://www.hostinger.com/tutorials/what-is-javascript">hostinger.com</a></li>
+            <li><a
+                href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">developer.mozilla.org</a>
+            </li>
+            <li><a href="https://techjury.net/blog/javascript-usage-statistics/">techjury.net</a></li>
+          </ol>
         </div>
+      </div>
 
-        <div class="content">
-            <div class="article_container">
-                <div class="left_column">
-                    <img src="img/js_Creator.jpg" alt="Brendan Eich Portrait">
-                    <p class="caption"><strong>Brendan Eich</strong>, creator of JavaScript</p>
-                </div>
+      <div class="right_column">
+        <img src="img/js.png" alt="JavaScript written in an IDE">
+        <p class="caption">JavaScript written in an IDE</p>
+      </div>
+    </div>
+  </div>
 
-                <div class="center_column">
-                    <article class="article">
-                        <h2>What is JavaScript?</h2>
-                        <p class="section">
-                            JavaScript is a lightweight programming language that focuses on <span>web development</span>.
-                            JavaScript allows users to make their web pages dynamic and exciting, while also providing
-                            helpful features like dynamic HTML/CSS elements and other intractable elements like forms.
-                            Any non-static element on a web page likely includes JavaScript behind the scenes. JavaScript
-                            lets you maintain <span>user interaction</span> which CSS can not provide.
-                        </p>
-                        <h2>Where is JavaScript Used?</h2>
-                        <p class="section">
-                            JavaScript is used <span>everywhere</span>. As of 2022, <span>98.7% of websites</span>
-                            use Javascript as a client-side programming language. While JavaScript is typically used
-                            in web development and web applications, it can be used in games, smartwatch apps, and
-                            web servers.
-                        </p>
-                    </article>
+  <footer class="footer">
+    <hr>
+    <div class="container">
+      <img src="img/csumbLogo3.png" alt="CSUMB logo">
+      <div class="text_container">
+        <p>
+          CST336 Internet Programming: 2023&copy; Casey <br>
+          <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
+          It is used for academic purposes only.
+        </p>
+      </div>
+    </div>
+  </footer>
+</body>
 
-                    <div class="references">
-                        <hr>
-                        <h2>Sources</h2>
-                        <ol id="sources">
-                            <li><a href="https://www.hostinger.com/tutorials/what-is-javascript">hostinger.com</a></li>
-                            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">developer.mozilla.org</a></li>
-                            <li><a href="https://techjury.net/blog/javascript-usage-statistics/">techjury.net</a></li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="right_column">
-                    <img src="img/js.png" alt="JavaScript written in an IDE">
-                    <p class="caption">JavaScript written in an IDE</p>
-                </div>
-            </div>
-        </div>
-
-        <footer class="footer">
-            <hr>
-            <div class="container">
-                <img src="img/csumbLogo3.png" alt="CSUMB logo">
-                <div class="text_container">
-                    <p>
-                        CST336 Internet Programming: 2023&copy; Casey <br>
-                        <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
-                        It is used for academic purposes only.
-                    </p>
-                </div>
-            </div>
-        </footer>
-    </body>
 </html>
