--- a/python.html
+++ b/python.html
@@ -1,84 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Python</title>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Python</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap" rel="stylesheet">
+</head>
 
-        <h1 id="page_title">Python: An Overview</h1>
+<body>
 
-        <div class="navbar_container">
-            <nav class="navbar">
-                <a href="index.html">Home</a>
-                <a href="python.html"><span>Python</span></a>
-                <a href="mysql.html">MySQL</a>
-                <a href="javascript.html">JavaScript</a>
-            </nav>
+  <h1 id="page_title">Python: An Overview</h1>
+
+  <div class="navbar_container">
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="python.html"><span>Python</span></a>
+      <a href="sql.html">SQL</a>
+      <a href="javascript.html">JavaScript</a>
+    </nav>
+  </div>
+
+  <div class="content">
+    <div class="article_container">
+      <div class="left_column">
+        <img src="img/Python_Creator.png" alt="Guido Van Rossum Portrait">
+        <p class="caption">Designer of python, <strong>Guido van Rossum</strong></p>
+      </div>
+
+      <div class="center_column">
+        <article class="article">
+          <h2>What is Python?</h2>
+          <p class="section">
+            Python is a <span>high level object orientated programming language</span>.
+            Python is built with rapid deployment in mind. Due to Python's easy to learn syntax,
+            it is exceptionally easy to increase readability while also reducing the cost of long term
+            maintenance. Python simplifies data structures which also makes it a <span>great candidate
+              for beginners.</span> Finally, Python is an extremely modular language with its support for
+            modules and packages.
+          </p>
+          <h2>Where is Python Used?</h2>
+          <p class="section">
+            Due to Python's simplistic nature, Python is heavily used in <span>data analysis, machine learning,
+              and software development.</span> Python can easily be used for data visualization which makes
+            it a fantastic tool for many jobs in the scientific field as well.
+          </p>
+        </article>
+
+        <div class="references">
+          <hr>
+          <h2>Sources</h2>
+          <ol id="sources">
+            <li><a href="https://www.python.org/doc/essays/blurb/">python.org</a></li>
+            <li><a href="https://www.datacamp.com/blog/what-is-python-used-for">datacamp.com</a></li>
+          </ol>
         </div>
+      </div>
 
-        <div class="content">
-            <div class="article_container">
-                <div class="left_column">
-                    <img src="img/Python_Creator.png" alt="Guido Van Rossum Portrait">
-                    <p class="caption">Designer of python, <strong>Guido van Rossum</strong></p>
-                </div>
+      <div class="right_column">
+        <img src="img/python_data_visualization.png" alt="Graph showing Python data visualization">
+        <p class="caption">Data visualization using python</p>
+      </div>
+    </div>
+  </div>
 
-                <div class="center_column">
-                    <article class="article">
-                        <h2>What is Python?</h2>
-                        <p class="section">
-                            Python is a <span>high level object orientated programming language</span>.
-                            Python is built with rapid deployment in mind. Due to Python's easy to learn syntax,
-                            it is exceptionally easy to increase readability while also reducing the cost of long term
-                            maintenance. Python simplifies data structures which also makes it a <span>great candidate
-                            for beginners.</span> Finally, Python is an extremely modular language with its support for
-                            modules and packages.
-                        </p>
-                        <h2>Where is Python Used?</h2>
-                        <p class="section">
-                            Due to Python's simplistic nature, Python is heavily used in <span>data analysis, machine learning,
-                            and software development.</span> Python can easily be used for data visualization which makes
-                            it a fantastic tool for many jobs in the scientific field as well.
-                        </p>
-                    </article>
+  <footer class="footer">
+    <hr>
+    <div class="container">
+      <img src="img/csumbLogo3.png" alt="CSUMB logo">
+      <div class="text_container">
+        <p>
+          CST336 Internet Programming: 2023&copy; Casey <br>
+          <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
+          It is used for academic purposes only.
+        </p>
+      </div>
+    </div>
+  </footer>
 
-                    <div class="references">
-                        <hr>
-                        <h2>Sources</h2>
-                        <ol id="sources">
-                            <li><a href="https://www.python.org/doc/essays/blurb/">python.org</a></li>
-                            <li><a href="https://www.datacamp.com/blog/what-is-python-used-for">datacamp.com</a></li>
-                        </ol>
-                    </div>
-                </div>
+</body>
 
-                <div class="right_column">
-                    <img src="img/python_data_visualization.png" alt="Graph showing Python data visualization">
-                    <p class="caption">Data visualization using python</p>
-                </div>
-            </div>
-        </div>
-
-        <footer class="footer">
-            <hr>
-            <div class="container">
-                <img src="img/csumbLogo3.png" alt="CSUMB logo">
-                <div class="text_container">
-                    <p>
-                        CST336 Internet Programming: 2023&copy; Casey <br>
-                        <strong>Disclaimer:</strong> The information in this webpage is fictitious. <br>
-                        It is used for academic purposes only.
-                    </p>
-                </div>
-            </div>
-        </footer>
-
-    </body>
 </html>
